k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nsip
  labels:
    app.kubernetes.io/part-of: nsip-platform
